--- a/Frontend/my-app/src/app/tinder/tinder.module.css
+++ b/Frontend/my-app/src/app/tinder/tinder.module.css
@@ -8,6 +8,7 @@
 .backgroundImage {
   width: 100%;
   height: 100%;
+  background-image: url('/background_img.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
